# gmx_ffconv

./: README.md  pyproject.toml
.github/workflows/: publish.yml
Scripts/: convert_NMRrestraints.py  convert_restraints.py
Tutorial/Example1/: CHARMM_MEMB.gro
Tutorial/Example1/AMBER_REF/: index.ndx  step5_input.gro  topol.top
Tutorial/Example1/AMBER_REF/toppar/: CHL.itp  PPPC.itp  forcefield.itp
Tutorial/Example1/toppar_AMBER/toppar_AMBER/: OOPE.itp
Tutorial/Example1/toppar_CHARMM/: DPPC.itp  forcefield.itp
gmx_ffconv/: BZAA_CHARMM.gro  cli.py
gmx_ffconv/data/toppar_AMBER/: BZAA.itp  forcefield.itp
gmx_ffconv/data/toppar_CHARMM/: BZAA.itp  CHL1.itp  CLA.itp  forcefield.itp
gmx_ffconv/utilities/: groconv.py
gmx_ffconv/utilities/utilities_ffmap/: file_reader.py  graph_functions.py  mapping_naming.py  mapping_standard.py
gmx_ffconv/utilities/utilities_groconv/: coordinate_reorganise.py
