[project]
name = "gmx_ffconv"
version = "1.0.0"
description = "An automated GROMACS force field converter tool"
authors = [{ name = "Jasmine E. Aaltonen" }]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "networkx"
]

[project.scripts]
gmx_ffconv = "gmx_ffconv.cli:main"

[tool.setuptools]
packages = ["gmx_ffconv"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
